k8s/infra/ingress/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-igress
  namespace: monitoring
spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: grafana
          port: 80
